syntax = "proto3";

package account.user.v1;

option go_package = "github.com/iput-kernel/foundation-account/internal/pb/account/user/v1;accountv1";

message TransferRequest {
  string from_user_name = 1;
  string to_user_name = 2;
  int64 amount = 3;
}

message TransferResponse {
  string from_user_name = 1;
  string to_user_name = 2;
  int64 amount = 3;
}
